<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
>  
<RadioGroup 
android:id="@+id/radioGroupSet"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_x="3px"
android:layout_y="54px"
>

<RadioButton 
android:id="@+id/radio_L"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text = "@string/orientation_l"
></RadioButton>

<RadioButton 
android:id="@+id/radio_P"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text = "@string/orientation_p"
></RadioButton>
 
<RadioButton 
android:id="@+id/radio_U"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text = "@string/orientation_u"
></RadioButton>

</RadioGroup>
</LinearLayout>


