<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop = "100dip">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_text"
        android:textSize="20dip"/>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<LinearLayout android:orientation="horizontal" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dip" android:layout_weight="1"
			android:gravity="center_horizontal">

			<TextView android:text="@string/login_user"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:padding="3dip"
				android:gravity="right" />
			<EditText android:id="@+id/username"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:padding="3dip" android:lines="1" />
		</LinearLayout>
		
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dip" android:layout_weight="1"
			android:gravity="center_horizontal">

			<TextView android:id="@+id/loginpass"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:padding="3dip"
				android:gravity="right" />
			<EditText android:id="@+id/password" android:padding="3dip"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:lines="1"  android:password="true" />
		</LinearLayout>
		

	</LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

		<Button
            android:id="@+id/login"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft = "30dip"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>